--- a/package.json
+++ b/package.json
@@ -55,8 +55,10 @@
     "react": "^16.7.0",
     "react-container-query": "^0.11.0",
     "react-copy-to-clipboard": "^5.0.1",
+    "react-data-export": "^0.5.0",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.7.0",
+    "react-export-excel": "^0.5.3",
     "react-fittext": "^1.0.0",
     "react-media": "^1.9.2",
     "react-router-dom": "^4.3.1"
