--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "react-export-excel": "^0.5.3",
     "react-fittext": "^1.0.0",
     "react-media": "^1.9.2",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "xlsx": "^0.14.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.123",
