--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-export-excel": "^0.5.3",
     "react-fittext": "^1.0.0",
     "react-media": "^1.9.2",
+    "react-resizable": "^1.7.5",
     "react-router-dom": "^4.3.1",
     "xlsx": "^0.14.2"
   },
