--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-#ENDPOINT=http://seoquanganh.herokuapp.com/
-ENDPOINT=http://localhost:30001/
+ENDPOINT=http://seoquanganh.herokuapp.com/
+#ENDPOINT=http://localhost:30001/
